# cli-ai

./: .gitignore  Dockerfile  README.md  dataset_example.ipynb  docker-compose.yml  main.py  pyproject.toml  server.py  solution.ipynb
